--- a/react/package.json
+++ b/react/package.json
@@ -4,6 +4,7 @@
     "babel-core": "^6.6.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "classnames": "^2.1.5",
     "director": "^1.2.0",
     "react": "^0.13.3",
