--- a/RNmovies/package.json
+++ b/RNmovies/package.json
@@ -6,9 +6,11 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "fbjs": "^0.7.2",
     "react": "0.14.7",
     "react-dom": "0.14.7",
     "react-native": "^0.17.0",
+    "react-timer-mixin": "^0.13.3",
     "react-web": "^0.2.1"
   },
   "devDependencies": {
