--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - "4"
 script: "npm run test"
+after_script: "npm install coveralls && cat ./coverage/lcov.info | coveralls"
 branches:
   only:
     - gh-pages
