--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "url": ""
   },
   "scripts": {
-    "test": "./node_modules/.bin/_mocha --require should"
+    "test": "./node_modules/.bin/_mocha --require should",
+    "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter spec --check-leaks test/"
   },
   "author": "RayLiao",
   "license": "MIT",
   "devDependencies": {
+    "istanbul": "^0.4.3",
     "mocha": "^2.4.5",
     "should": "^8.3.1"
   }
