--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -27,7 +27,8 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
+    "now-build": "npm run build"
   },
   "devDependencies": {
     "prettier": "^1.15.2"
