--- a/cra/package.json
+++ b/cra/package.json
@@ -6,7 +6,8 @@
     "animejs": "^3.1.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "zdog": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
